Fix Paper 1.21 menu editing and reloads